# fastapi-sqlalchemy-realworld-example

./: .gitignore  README.md
server/: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run.sh
server/alembic/: env.py
server/alembic/data/: c07a2d25a384_.py  users.json
server/models/: __init__.py  aricles.py  comments.py  followed_profiles.py  mixins.py  profiles.py  tags.py  users.py
server/router/: __init__.py  aricles.py  profiles.py  tags.py  user.py  users.py
server/schemas/: __init__.py  articles.py  comments.py  profiles.py  tags.py  users.py
server/services/: __init__.py  jwt.py  postgres.py  user.py  users.py
server/services/api/: articles.py  comments.py  profiles.py  tags.py  users.py
