[tool.poetry]
name = "server"
version = "0.1.0"
description = "Real world app (RWA) backend using fastAPI, poetry and sqlalchem"
authors = ["evgeny-finkin <evgeny.finkin@tikalk.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.87.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
