[tool.poetry]
name = "server"
version = "0.1.0"
description = "Real world app (RWA) backend using fastAPI, poetry and sqlalchem"
authors = ["evgeny-finkin <evgeny.finkin@tikalk.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.87.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
sqlalchemy = "^1.4.44"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
asyncpg = "^0.27.0"
fastapi-jwt-auth = "^0.5.0"
sqlalchemy_utils = "^0.38.3"
nest_asyncio = "^1.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
